--- a/app/views/wiki_pages/_wiki_page_table.html.erb
+++ b/app/views/wiki_pages/_wiki_page_table.html.erb
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th>Page Title</th>
-      <th>Last Updated</th>
+      <th style="white-space:nowrap; padding-right: 20px; ">Last Updated</th>
     </tr>
   </thead>
   <tbody>
