--- a/app/views/wiki_pages/index.html.erb
+++ b/app/views/wiki_pages/index.html.erb
@@ -15,7 +15,7 @@
       <p>[<%= link_to "create new page", wiki_page_new_path %>]</p>
     </td>
 
-    <td style="width:410px; vertical-align:top">
+    <td style="vertical-align:top">
       <%= render :partial => 'tag_cloud' %>
     </td>
   </tr>
