fixed colors in footer

--- a/app/views/themes/colors.css.erb
+++ b/app/views/themes/colors.css.erb
@@ -17,3 +17,5 @@ a:hover { color: <%= @colors[0] %> }
   <%= ".border_palette_#{n+1} { border-color: #{@colors[n]}; }" %>
 <% end %>
 
+.bg_palette_1 a:link, .bg_palette_1 a:visited, .bg_palette_1 a:active { color: <%= @colors[1] %>; }
+.bg_palette_1 a:hover { color: <%= @colors[3] %> }
