added a limit option to the list functions of content pages

--- a/app/views/content_pages/_form.html.erb
+++ b/app/views/content_pages/_form.html.erb
@@ -24,7 +24,7 @@
       <div style="padding-left: 25px;">
         Options for List functions <em>(add to end before closing brackets)</em>:
         WithHome, SortByDate, SortByDateReverse
-        SortByAlpha, SortByAlphaReverse
+        SortByAlpha, SortByAlphaReverse, Limit=n
       </div>
     </div>
   <% end %>
