some basic caching on pages and css

--- a/app/views/content_pages/show.html.erb
+++ b/app/views/content_pages/show.html.erb
@@ -1,13 +1,14 @@
-<h1><%=h @content_page.name %></h1>
+<% cache do %>
+  <h1><%=h @content_page.name %></h1>
 
-<%= @content_page.body_for_display %>
+  <%= @content_page.body_for_display %>
 
-<% unless @content_page.categories.empty? %>
-  <p class="category_links">
-    Categories: <%= @content_page.categories.map { |cat| link_to(cat.name, cat) }.join(', ') %>
-  </p>
+  <% unless @content_page.categories.empty? %>
+    <p class="category_links">
+      Categories: <%= @content_page.categories.map { |cat| link_to(cat.name, cat) }.join(', ') %>
+    </p>
+  <% end %>
 <% end %>
-
 
 <% if is_admin? %>
   <% unless @content_page.publish_on.nil? %>
