--- a/app/views/wiki_pages/chatter.html.erb
+++ b/app/views/wiki_pages/chatter.html.erb
@@ -5,9 +5,15 @@
 <% for comment in @comments %>
   <div class="wiki_page_body">
     <p>
-      <span class="darkgray">
-        On <%= link_to comment.wiki_page.title, wiki_page_show_path(:title => comment.wiki_page.url_title) %>,
-        <strong><%= comment.user.name %></strong> said <%= post_time comment.created_at %>: &nbsp;</span>
+      <% if comment.wiki_page %>
+        <span class="darkgray">
+          On <%= link_to comment.wiki_page.title, wiki_page_show_path(:title => comment.wiki_page.url_title) %>,
+          <strong><%= comment.user.name %></strong> said <%= post_time comment.created_at %>: &nbsp;</span>
+      <% else %>
+        <span class="darkgray">
+          <%= post_time comment.created_at %> <strong><%= comment.user.name %></strong> 
+        </span>
+      <% end %>
       <%= textilize_without_paragraph comment.body %>
     </p>
   </div><br/>
