working on making wiki comments digestable
also introduced factory girl for specs

--- a/app/views/wiki_pages/_top_links.html.erb
+++ b/app/views/wiki_pages/_top_links.html.erb
@@ -7,7 +7,7 @@
     <% end %>
 
     <%= link_to 'new', wiki_page_new_path %> &nbsp;
-    <%= link_to 'chatter', wiki_page_chatter_path %> &nbsp;
+    <%= link_to 'chatter', wiki_comments_path %> &nbsp;
 
     <input name="name" id="name" size="6" value="search" onclick="if ( $('#name')[0].value == 'search') $('#name')[0].value = '';"/>
     <input type="submit" value="Go"/>
