add links for atom feeds on wiki comments

--- a/app/views/wiki_comments/index.html.erb
+++ b/app/views/wiki_comments/index.html.erb
@@ -3,7 +3,7 @@
 <h1><%= link_to "Wiki", wiki_page_show_home_path %>: Recent Comments and Changes</h1>
 
 <% for comment in @comments %>
-  <div class="wiki_page_body">
+  <div class="wiki_chatter">
     <p>
       <% if comment.wiki_page %>
         <span class="darkgray">
