--- a/app/views/wiki_pages/_top_links.html.erb
+++ b/app/views/wiki_pages/_top_links.html.erb
@@ -9,11 +9,23 @@
     <%= link_to 'new', wiki_page_new_path %> &nbsp;
     <%= link_to 'chatter', wiki_comments_path %> &nbsp;
 
-    <input name="name" id="name" size="6" value="search" onclick="if ( $('#name')[0].value == 'search') $('#name')[0].value = '';"/>
+    <input name="name" id="name" size="6" value="search"
+           onclick="if ( $('#name')[0].value == 'search') $('#name')[0].value = '';"/>
     <input type="submit" value="Go"/>
   </form>
   <% if @wiki_page %>
     <em class="tiny_text">page last updated: <%= @wiki_page.updated_at.strftime "%m/%d/%y"  %></em>
     (<%= link_to 'history', wiki_page_history_path(:title => @wiki_page.url_title) %>)
+  <% end %>
+
+  <% if @comments %>
+    <span class="feed_links">
+      <%= link_to image_tag('feed-icon.gif') + " all", formatted_wiki_comments_url(:atom),
+            :title => 'Subscribe to feed for all activity' %>
+      <%= link_to image_tag('feed-icon.gif') + " daily", formatted_daily_wiki_comments_url(:atom),
+            :title => 'Subscribe to feed for daily digest' %>
+      <%= link_to image_tag('feed-icon.gif') + " weekly", formatted_weekly_wiki_comments_url(:atom),
+            :title => 'Subscribe to feed for weekly digest' %>
+    </span>
   <% end %>
 </div>
