make message appear if someone is editing a wiki page

--- a/app/views/site_settings/index.html.erb
+++ b/app/views/site_settings/index.html.erb
@@ -15,7 +15,7 @@
     <p>
       <strong>Footer:</strong>
       <%= text_area_tag :site_footer, site_footer, :cols => 80, :rows => 3,
-        :style => "vertical-align:middle; height: 40px; width: 80%;" %>
+        :style => "vertical-align:middle; height: 60px; width: 80%; font-size: 90%;" %>
     </p>
     <p>
       <strong>Registration Password:</strong> (leave blank if none required)
