added a sort to the user list

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,39 @@
 <h1>Users</h1>
 
-<table class="nice_table">
-  <tr>
-    <th>Login (Full Name)</th>
-		<th>Email</th>
-		<th style="text-align:center;">Admin</th>
-		<th colspan="3" style="border: 1px #CCF dashed; text-align:center">Manage</th>
-  </tr>
-
-<% for user in @users %>
-  <tr>
-  	<td><%= link_to user.login, :action => 'edit', :id => user %> (<%= user.fullname %>)</td>
-		<td><%= user.email %></td>
-		<td style="text-align:center"><%= "X" if user.is_admin? %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-		<td><%= link_to 'Delete', user_path(user), :confirm => 'Are you sure you want to permanently delete this user account?',
-                :method => "delete" %></td>
-  </tr>
-<% end %>
+<table class="nice_table tablesorter">
+  <thead>
+    <tr>
+      <th>Login (Full Name)</th>
+      <th>Email</th>
+      <th>Grps</th>
+      <th style="text-align:center;">Admin</th>
+      <th colspan="3" style="border: 1px #CCF dashed; text-align:center">Manage</th>
+    </tr>
+  </thead>
+  <tbody>
+  <% for user in @users %>
+    <tr>
+      <td><%= link_to user.login, :action => 'edit', :id => user %> (<%= user.fullname %>)</td>
+      <td><%= user.email %></td>
+      <td><%= link_to user.user_groups.count,{ :action => 'edit', :id => user }, :title => user.user_groups.map(&:name).join(', ')  %></td>
+      <td style="text-align:center"><%= "X" if user.is_admin? %></td>
+      <td><%= link_to 'Edit', edit_user_path(user) %></td>
+      <td><%= link_to 'Delete', user_path(user), :confirm => 'Are you sure you want to permanently delete this user account?',
+                  :method => "delete" %></td>
+    </tr>
+  <% end %>
+  </tbody>
 </table>
 
 <p class="admin_links">
   <%= link_to "Manage User Groups", user_groups_path %>
 </p>
+
+
+<script type="text/javascript">
+$(document).ready(function()
+  {
+    $(".nice_table").tablesorter( { widgets: ['zebra'], headers: { 3:{sorter: false}, 4:{sorter: false}} });
+  }
+);
+</script>
