onload events for content and wiki page editing
if someone navigates away and doesn't save, then un-mark that the page was being edited

--- a/app/views/content_pages/edit.html.erb
+++ b/app/views/content_pages/edit.html.erb
@@ -50,4 +50,10 @@
       return "You may have unsaved changes.";
     }
   }
+
+  window.onunload = function() {
+    if (needToConfirm) {
+      $.post('<%= un_edit_content_page_path @content_page %>');
+    }
+  }
 </script>
