--- a/app/views/wiki_pages/index.html.erb
+++ b/app/views/wiki_pages/index.html.erb
@@ -1,30 +1,2 @@
-<%= render :partial => "top_links" %>
 
-<% if @wiki_tag %>
-  <h1>Pages Tagged: <%= @wiki_tag.name %></h1>
-<% else %>
-  <h1>Recently updated pages</h1>
-<% end %>
-
-<table style="width:100%">
-  <tr>
-    <td style="font-size: 12px; vertical-align:top">
-      <p><%= will_paginate %></p>
-      <%= render :partial => 'wiki_page_table'  %>
-      <p><%= will_paginate %></p>
-      <p>[<%= link_to "create new page", wiki_page_new_path %>]</p>
-    </td>
-
-    <td style="vertical-align:top">
-      <%= render :partial => 'tag_cloud' %>
-    </td>
-  </tr>
-</table>
-
-<script type="text/javascript">
-  $(document).ready(function()
-    {
-      $("#wiki_pages_table").tablesorter( { widgets: ['zebra'] });
-    }
-  );
-</script>
+not used
