--- a/app/views/message_posts/_whole_message.html.erb
+++ b/app/views/message_posts/_whole_message.html.erb
@@ -11,7 +11,7 @@
     <% if current_user == message.user -%>
       <div style="float:right">[<%= link_to "edit", :action => :edit, :id => message %>]</div>
     <% end -%>
-    <div style="clear:both; padding-top:3px;"><%= textilize message.body %></div>
+    <div style="clear:both; padding-top:3px;"><%= message.body %></div>
     <% if message.updated_at > message.created_at -%>
       <div><em>Last Edit: <%= post_time message.updated_at %></em></div>
     <% end -%>
