--- a/app/views/site_settings/admin.html.erb
+++ b/app/views/site_settings/admin.html.erb
@@ -5,6 +5,9 @@
   <li><%= link_to 'List of Categories', categories_path %></li>
   <li><%= link_to 'Site-wide Settings', site_settings_path %></li>
   <li><%= link_to 'User Management', users_path %></li>
+  <li><%= link_to 'User Groups', user_groups_path %></li>
+  <li><%= link_to 'Wikis', wikis_path %></li>
+  <li><%= link_to 'Forums', forums_path %></li>
   <li><%= link_to 'Theme/Styling', :controller => :themes %></li>
   <li><%= link_to 'Custom CSS', :controller => :themes, :action => :css_editor %></li>
 </ul>
