--- a/app/views/message_posts/index.html.erb
+++ b/app/views/message_posts/index.html.erb
@@ -1,34 +1,1 @@
-<h1>Listing message_posts</h1>
-
-<table>
-  <tr>
-    <th>Subject</th>
-    <th>Body</th>
-    <th>Forum</th>
-    <th>Parent</th>
-    <th>User</th>
-    <th>To user</th>
-    <th>Thread</th>
-    <th>Replied to at</th>
-  </tr>
-
-<% @message_posts.each do |message_post| %>
-  <tr>
-    <td><%=h message_post.subject %></td>
-    <td><%=h message_post.body %></td>
-    <td><%=h message_post.forum_id %></td>
-    <td><%=h message_post.parent_id %></td>
-    <td><%=h message_post.user_id %></td>
-    <td><%=h message_post.to_user_id %></td>
-    <td><%=h message_post.thread_id %></td>
-    <td><%=h message_post.replied_to_at %></td>
-    <td><%= link_to 'Show', message_post %></td>
-    <td><%= link_to 'Edit', edit_message_post_path(message_post) %></td>
-    <td><%= link_to 'Destroy', message_post, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New message_post', new_message_post_path %>
+Go to forum for this
