--- a/app/views/wikis/_top_links.html.erb
+++ b/app/views/wikis/_top_links.html.erb
@@ -1,5 +1,5 @@
 <div class="wiki_top_links">
-  <form name="wiki_search" id="wiki_search" action="/wiki/search">
+  <form id="wiki_search" action="/wiki/search">
     <% if @wiki_page %>
       <%= link_to 'edit', edit_wiki_wiki_page_path(@wiki, @wiki_page) %> &nbsp;
       <%= link_to 'delete', { :controller => '/wiki_pages', :action => :destroy, :id => @wiki_page },
@@ -7,7 +7,7 @@
     <% end %>
 
     <%= link_to 'new', new_wiki_wiki_page_path(@wiki) %> &nbsp;
-    <%= link_to 'chatter', wiki_comments_path %> &nbsp;
+    <%= link_to 'chatter', wiki_wiki_comments_path(@wiki) %> &nbsp;
 
     <input name="name" id="name" size="6" value="search"
            onclick="if ( $('#name')[0].value == 'search') $('#name')[0].value = '';"/>
@@ -20,11 +20,11 @@
 
   <% if @comments %>
     <span class="feed_links">
-      <%= link_to image_tag('feed-icon.gif') + " all", formatted_wiki_comments_url(:atom),
+      <%= link_to image_tag('feed-icon.gif') + " all", formatted_wiki_wiki_comments_url(@wiki, :atom),
             :title => 'Subscribe to feed for all activity' %>
-      <%= link_to image_tag('feed-icon.gif') + " daily", formatted_daily_wiki_comments_url(:atom),
+      <%= link_to image_tag('feed-icon.gif') + " daily", formatted_daily_wiki_wiki_comments_url(@wiki, :atom),
             :title => 'Subscribe to feed for daily digest' %>
-      <%= link_to image_tag('feed-icon.gif') + " weekly", formatted_weekly_wiki_comments_url(:atom),
+      <%= link_to image_tag('feed-icon.gif') + " weekly", formatted_weekly_wiki_wiki_comments_url(@wiki, :atom),
             :title => 'Subscribe to feed for weekly digest' %>
     </span>
   <% end %>
