--- a/app/views/wikis/_top_links.html.erb
+++ b/app/views/wikis/_top_links.html.erb
@@ -20,11 +20,11 @@
 
   <% if @comments %>
     <span class="feed_links">
-      <%= link_to image_tag('feed-icon.gif') + " all", formatted_wiki_wiki_comments_url(@wiki, :atom),
+      <%= link_to image_tag('feed-icon.gif') + " all", wiki_wiki_comments_url(@wiki, :format => :atom),
             :title => 'Subscribe to feed for all activity' %>
-      <%= link_to image_tag('feed-icon.gif') + " daily", formatted_daily_wiki_wiki_comments_url(@wiki, :atom),
+      <%= link_to image_tag('feed-icon.gif') + " daily", daily_wiki_wiki_comments_url(@wiki, :format => :atom),
             :title => 'Subscribe to feed for daily digest' %>
-      <%= link_to image_tag('feed-icon.gif') + " weekly", formatted_weekly_wiki_wiki_comments_url(@wiki, :atom),
+      <%= link_to image_tag('feed-icon.gif') + " weekly", weekly_wiki_wiki_comments_url(@wiki, :format => :atom),
             :title => 'Subscribe to feed for weekly digest' %>
     </span>
   <% end %>
