yay all specs pass

--- a/app/views/wiki_pages/_form.html.erb
+++ b/app/views/wiki_pages/_form.html.erb
@@ -1,4 +1,6 @@
-<% form_for(@wiki_page) do |f| %>
+<% opts = @wiki_page.new_record? ? { :url => wiki_wiki_pages_path(@wiki) } :
+  { :url => wiki_wiki_page_path(@wiki, @wiki_page), :method => :put } %>
+<% form_for(@wiki_page, opts) do |f| %>
   <%= f.error_messages %>
   <p>
     <b>Title</b>:
@@ -34,8 +36,8 @@
     CKEDITOR.replace( 'wiki_page[body]',
       {
         uiColor : '#819033',
-        filebrowserUploadUrl : '<%= upload_handler_wiki_page_path(@wiki_page) %>'
-        //filebrowserBrowseUrl : '<%= page_link_handler_wiki_page_path(@wiki_page) %>'
+        filebrowserUploadUrl : '<%= upload_handler_wiki_wiki_page_path(@wiki, @wiki_page) %>'
+        //filebrowserBrowseUrl : '<%= page_link_handler_wiki_wiki_page_path(@wiki, @wiki_page) %>'
       });
   //]]>
 </script>
