--- a/app/views/wiki_pages/new.html.erb
+++ b/app/views/wiki_pages/new.html.erb
@@ -1,3 +1,3 @@
-<h1><%= link_to "Wiki", wiki_page_show_home_path %>: New Wiki Page</h1>
+<h1><%= link_to @wiki.name, @wiki %>: New Wiki Page</h1>
 
 <%= render :partial => 'form'  %>
