--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,15 +1,13 @@
-<p>
-  <b>Name:</b>
-  <%=h @wiki.name %>
-</p>
-
-
 <%= render :partial => "top_links" %>
 
+<h1><%=h @wiki.name %></h1>
+
+<%= textilize @wiki.description %>
+
 <% if @wiki_tag %>
-  <h1>Pages Tagged: <%= @wiki_tag.name %></h1>
+  <h2>Pages Tagged: <%= @wiki_tag.name %></h2>
 <% else %>
-  <h1>Recently updated pages</h1>
+  <h2>Recently updated pages</h2>
 <% end %>
 
 <table style="width:100%">
