last minute fixes to forums and wikis

--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= link_to "Forums", forums_path %>: <%= @forum.title %></h1>
+<h1><%= @forum.title %></h1>
 
 <p class="small_text"><%= @forum.description %></p>
 
