--- a/app/views/wiki_pages/search.html.erb
+++ b/app/views/wiki_pages/search.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => "top_links" %>
+<%= render :partial => "/wikis/top_links" %>
 
 <p><em>search results for: <%= @name_part %></em></p>
 
@@ -10,7 +10,7 @@
       <div style="margin: 5px; border: 1px #999 solid; background: #FFF; padding:4px 12px;">
         <% for wiki_page in @wiki_pages %>
           <p>
-            <%= link_to highlight(wiki_page.title, @name_part), wiki_page_show_path(:title => wiki_page.url_title) %>
+            <%= link_to highlight(wiki_page.title, @name_part), wiki_pages_show_by_title_path(@wiki, wiki_page.url_title) %>
             <span style="color: #555;">&nbsp; &nbsp; <%= highlight(excerpt(strip_tags(wiki_page.body), @name_part), @name_part) %></span>
           </p>
         <% end %>
@@ -23,7 +23,7 @@
         <div style="margin: 5px; border: 1px #999 solid; background: #FFF;  padding:4px 12px;">
           <% for wiki_tag in @wiki_tags -%>
           <p>
-            <%= link_to wiki_tag.name, wiki_page_tag_path(:tag_name => wiki_tag.name) %>
+            <%= link_to wiki_tag.name, wiki_tag_path(@wiki, :tag_name => wiki_tag.name) %>
             (<%= pluralize wiki_tag.wiki_pages_count, "page" %>)
           </p>
           <% end %>
